Added autoconfig generated files
git-svn-id: https://svn.code.sf.net/p/spg/code@12 e090b864-f8d0-43dc-ad92-f87c3a62f662

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Build instructions
-To build Small Privacy Guard simply type 'make'
-You have to have gcrypt and openSSL libraries installed in your system
+Build instructions:
+To build Small Privacy Guard simply use the configure script provided.
+You have to have gcrypt and openSSL libraries installed in your system.
 
